Private + public pastes; AuthInterceptor fixed